<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.moroccanpizza.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_pizza_detail"
            app:destination="@id/pizza_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.moroccanpizza.fragment.MenuFragment"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menu_to_pizza_detail"
            app:destination="@id/pizza_detail_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.moroccanpizza.fragment.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cart_to_checkout"
            app:destination="@id/checkout_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.moroccanpizza.fragment.OrderFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orders_to_tracking"
            app:destination="@id/tracking_fragment" />
        <action
            android:id="@+id/action_orders_to_order_details"
            app:destination="@id/order_details_fragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.moroccanpizza.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
        
    <fragment
        android:id="@+id/navigation_support"
        android:name="com.example.moroccanpizza.fragment.SupportFragment"
        android:label="@string/customer_support"
        tools:layout="@layout/fragment_support" />

    <fragment
        android:id="@+id/pizza_detail_fragment"
        android:name="com.example.moroccanpizza.fragment.PizzaDetailFragment"
        android:label="Pizza Detail">
        <argument
            android:name="pizzaId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/checkout_fragment"
        android:name="com.example.moroccanpizza.fragment.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/fragment_checkout">
        <action
            android:id="@+id/action_checkout_to_tracking"
            app:destination="@id/tracking_fragment" />
    </fragment>

    <fragment
        android:id="@+id/tracking_fragment"
        android:name="com.example.moroccanpizza.fragment.TrackingFragment"
        android:label="@string/track_order"
        tools:layout="@layout/fragment_tracking">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/order_details_fragment"
        android:name="com.example.moroccanpizza.fragment.OrderDetailsFragment"
        android:label="Order Details">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>
</navigation>
